<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/dialog_body_background">
        
        <TextView
            android:id="@+id/tituloDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/dialog_background"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/txtTituloDialog"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/mensagemDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/txtMensagemDialog"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tituloDialog"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancelar"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog"
        android:text="@string/btnConfirmarSaida"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_dialog"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnConfirmar"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog"
        android:text="@string/btnCancelarSaida"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>