<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LayoutSemPaddingBottom">

    <LinearLayout
        android:id="@+id/layout_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="50dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImgCapsula"/>
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/img_logo_escrito" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_enfermeiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_enfermeiro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_logo_login"/>

    <EditText
        android:id="@+id/editEmailLogin"
        style="@style/EditTextLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_enfermeiro"
        android:hint="@string/editEmailLogin"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:inputType="textEmailAddress"/>

    <ImageView
        style="@style/IconLogin"
        android:src="@drawable/ic_user_login"
        app:layout_constraintEnd_toEndOf="@id/editEmailLogin"
        app:layout_constraintBottom_toBottomOf="@id/editEmailLogin"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/editSenhaLogin"
        style="@style/EditTextLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmailLogin"
        android:hint="@string/editSenhaLogin"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:inputType="numberPassword"/>

    <ImageView
        android:id="@+id/mostrarSenha"
        style="@style/IconLogin"
        android:src="@drawable/ic_senha_login"
        app:layout_constraintEnd_toEndOf="@id/editSenhaLogin"
        app:layout_constraintBottom_toBottomOf="@id/editSenhaLogin"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:tag="SemVer"/>

    <CheckBox
        android:id="@+id/checkGravarDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkGravarDados"
        android:textSize="20sp"
        android:backgroundTint="@color/cinza_medio"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/editSenhaLogin"
        app:layout_constraintTop_toBottomOf="@id/editSenhaLogin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogar"
        style="@style/ButtonAlergia"
        android:text="@string/buttonLogar"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkGravarDados"/>

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCadastro"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textAlignment="textEnd"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogar"/>






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>