<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".fragments.CameraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LayoutBackground">

        <LinearLayout
            android:id="@+id/layout_header_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <ImageView
                style="@style/ImgCapsula"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtCamera"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        
        <EditText
            android:id="@+id/edit_search"
            style="@style/EditText"
            android:inputType="text"
            android:hint="@string/editSearch"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_header_camera"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lupa"
            app:layout_constraintEnd_toEndOf="@id/edit_search"
            app:layout_constraintTop_toTopOf="@id/edit_search"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>

        <View
            android:id="@+id/view_camera"
            style="@style/CardCamera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_search"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCam"
            app:layout_constraintStart_toStartOf="@id/view_camera"
            app:layout_constraintEnd_toEndOf="@id/view_camera"
            app:layout_constraintTop_toTopOf="@id/view_camera"
            android:textColor="@color/branco"
            android:textSize="20sp"
            android:layout_marginTop="140dp"
            android:textStyle="italic"/>

        <ImageButton
            android:id="@+id/imgRemedio"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_camera"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonPesquisar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/btnSearch"
            android:textColor="@color/branco"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/view_camera"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>